--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sat Apr 15 22:52:19 EEST 2017
+#Sun Apr 16 19:56:23 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task18.task1820
+javarush.status.filter=IN_PROGRESS
+javarush.last.task.key=com.javarush.task.task04.task0414
+javarush.last.task.path=E\:/JAVA/JavaRush/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task04/task0414
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
-javarush.last.task.path=E\:/JAVA/JavaRush/JavaRushTasks/2.JavaCore/src/com/javarush/task/task18/task1820
 javarush.level.filter=ALL
