--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sat Apr 22 20:43:22 EEST 2017
+#Mon Jun 12 23:44:18 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=IN_PROGRESS
-javarush.last.task.key=com.javarush.task.task20.task2005
-javarush.last.task.path=E\:/JAVA/JavaRush/JavaRushTasks/2.JavaCore/src/com/javarush/task/task20/task2005
+javarush.status.filter=ASSIGNED
+javarush.last.task.key=com.javarush.task.task20.task2010
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/2.JavaCore/src/com/javarush/task/task20/task2010
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
 javarush.level.filter=ALL
