--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Tue Jun 13 23:09:59 EEST 2017
+#Wed Jun 14 00:21:29 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task20.task2024
+javarush.status.filter=IN_PROGRESS
+javarush.last.task.key=com.javarush.task.task20.task2025
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/2.JavaCore/src/com/javarush/task/task20/task2025
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/2.JavaCore/src/com/javarush/task/task20/task2024
 javarush.level.filter=ALL
