--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Wed Jun 14 00:21:29 EEST 2017
+#Fri Jun 16 00:19:59 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=IN_PROGRESS
-javarush.last.task.key=com.javarush.task.task20.task2025
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/2.JavaCore/src/com/javarush/task/task20/task2025
+javarush.status.filter=ASSIGNED
+javarush.last.task.key=com.javarush.task.task21.task2103
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task21/task2103
 javarush.level.filter=ALL
