--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sat Jun 17 01:03:14 EEST 2017
+#Mon Jun 19 22:47:52 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task21.task2105
+javarush.last.task.key=com.javarush.task.task21.task2113.big16
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task21/task2113
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task21/task2105
 javarush.level.filter=ALL
