--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sun Sep 17 16:45:13 EEST 2017
+#Sun Sep 17 20:35:55 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task32.task3209.big24
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task32/task3209
+javarush.last.task.key=com.javarush.task.task29.task2912
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task29/task2912
 javarush.level.filter=ALL
