--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sun Sep 24 19:35:56 EEST 2017
+#Sun Sep 24 20:33:14 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task32.task3212
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task32/task3212
+javarush.status.filter=IN_PROGRESS
+javarush.last.task.key=com.javarush.task.task27.task2708
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task27/task2708
 javarush.level.filter=ALL
