--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sun Sep 24 22:05:43 EEST 2017
+#Wed Sep 27 00:34:58 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task22.task2213.big11
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task22/task2213
+javarush.last.task.key=com.javarush.task.task33.task3313
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task33/task3313
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
 javarush.level.filter=ALL
