--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sat Sep 30 22:56:33 EEST 2017
+#Sun Oct 01 14:28:46 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task34.task3412
+javarush.last.task.key=com.javarush.task.task30.task3008.big21
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task30/task3008
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task34/task3412
 javarush.level.filter=ALL
