--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Mon Oct 02 23:39:02 EEST 2017
+#Tue Oct 03 23:45:24 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task36.task3608.big06
-javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
+javarush.status.filter=IN_PROGRESS
+javarush.last.task.key=com.javarush.task.task36.task3608.big09
 javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task36/task3608
+javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
 javarush.level.filter=ALL
