--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Tue Oct 03 23:45:24 EEST 2017
+#Wed Oct 04 00:57:37 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=IN_PROGRESS
-javarush.last.task.key=com.javarush.task.task36.task3608.big09
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task36/task3608
+javarush.status.filter=ASSIGNED
+javarush.last.task.key=com.javarush.task.task37.task3707.big06
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task37/task3707
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
 javarush.level.filter=ALL
