--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sat Oct 07 20:04:51 EEST 2017
+#Sat Oct 07 23:09:03 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task28.task2810.big04
-javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task28/task2810
+javarush.status.filter=IN_PROGRESS
+javarush.last.task.key=com.javarush.task.task23.task2312.big17
 javarush.user.secretkey=bed91983-a778-416f-b3b9-daad52c6b69b
+javarush.last.task.path=D\:/Java/JavaRush/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task23/task2312
 javarush.level.filter=ALL
